Rename job from 'post-comment' to 'pr-comment' for consistency in workflow files

--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -93,7 +93,7 @@ jobs:
           retention-days: 7
           if-no-files-found: error
 
-  post-comment:
+  pr-comment:
     needs: build-debug
     permissions:
       pull-requests: write
