Add permissions section to PR comment workflow for clarity

--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -22,6 +22,10 @@ on:
         required: true
         type: string
 
+permissions:
+  pull-requests: write
+  issues: write
+
 jobs:
   pr-comment:
     runs-on: ubuntu-latest
